--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
-    "@reduxjs/toolkit": "^1.2.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,6 +13,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
     "styled-components": "^5.0.1",
     "typeface-roboto": "^0.0.75"
   },
