--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.0.1",
     "typeface-roboto": "^0.0.75"
   },
