--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "koa": "^2.11.0",
     "socket.io": "^2.3.0"
   }
 }
