--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,16 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "nodemon src/server.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "koa": "^2.11.0",
-    "socket.io": "^2.3.0"
+    "koa-socket": "^4.4.0",
+    "socket.io": "^2.3.0",
+    "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
