--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,45 @@
   "name": "chat-frontend",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "lint": "yarn lint:js && yarn lint:css",
+    "lint:css": "stylelint --ignore-path .gitignore 'src/**/*.js'",
+    "lint:fix": "yarn lint:js --fix && yarn lint:css --fix",
+    "lint:js": "eslint --ignore-path .gitignore src",
+    "lint:package": "sort-package-json",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "yarn lint:fix"
+    ],
+    "package.json": [
+      "yarn lint:package"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
@@ -22,25 +61,13 @@
     "styled-components": "^5.0.1",
     "typeface-roboto": "^0.0.75"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "husky": ">=3",
+    "lint-staged": "^10.0.7",
+    "sort-package-json": "^1.39.1",
+    "stylelint": "^13.2.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0"
   }
 }
