--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,15 +41,11 @@
   "dependencies": {
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-intl": "^3.12.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
@@ -59,6 +55,9 @@
     "typeface-roboto": "^0.0.75"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -70,7 +69,9 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-testing-library": "^2.2.3",
     "husky": ">=3",
+    "jest-styled-components": "^7.0.0",
     "lint-staged": "^10.0.7",
+    "react-scripts": "3.3.1",
     "sort-package-json": "^1.39.1",
     "stylelint": "11.1.1",
     "stylelint-config-recommended": "^3.0.0",
