--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "react-scripts build",
+    "build:serve": "yarn build && http-server ./build -p 3000",
     "eject": "react-scripts eject",
     "lint": "yarn lint:js && yarn lint:css",
     "lint:css": "stylelint --ignore-path .gitignore 'src/**/*.js'",
@@ -68,6 +69,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-testing-library": "^2.2.3",
+    "http-server": "^0.12.0",
     "husky": ">=3",
     "jest-styled-components": "^7.0.0",
     "lint-staged": "^10.0.7",
